--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
   <h1><a href="index.html">WEB</h1>
 <ol>
-<li><a href="1.html">HTML<br></li>
-<li><a href="2.html">CSS<br></li>
-<li><a href="3.html">JavaScript<br></li>
+<li><a href="1.html">UX<br></li>
+<li><a href="2.html">UI<br></li>
+<li><a href="3.html">GUI<br></li>
 </ol>
 
 <table border=".5">
