--- a/1.html
+++ b/1.html
@@ -3,6 +3,16 @@
 <head>
 <title>UX - html</title>
 <meta charset="utf-8">
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-142397303-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-142397303-1');
+</script>
 </head>
 
 <body>
@@ -19,6 +29,27 @@
 UX라고도 한다. 간단하게 말해 사용자가 어떤 제품, 서비스, 시스템을 쓰면서 겪는 기억, 감정, 태도, 행동 등의 모든 경험을 말한다. 국내에서 만들어진 용어가 아닌 구미 등 해외의 디자인계에서 조어한 용어이다. 매우 포괄적인 개념이기 때문에 해외 대기업에서는 이미 UX 라이터, 디자이너, 개발자 등 세분화 시켜서 고용하는 상황. 다만 디자이너가 가장 많이 알려진 직군이기 때문에 후술하는 설명들은 디자이너를 위주로 한다.
 사용자 경험을 디자인하는 것을 일컬어 사용자 경험 디자인이라고 하는데, 사용자 경험에 영향을 주는 모든 것을 설계하는 디자인의 한 분야이다. UX 디자이너는 엔지니어들이 디자인해 놓은 소프트웨어나, 웹서비스, IT기기의 유저 인터페이스 디자인에 더해 QA엔지니어나 테스트엔지니어의 역할과 유사한 업무를 할당 받는다. 터치스크린과 같이 자연스럽고 쉬운 인터랙션을 구성하는 것을 보조하는 것 또한 UX 디자인의 예이다.
 </p>
+
+<div id="disqus_thread"></div>
+<script>
+
+/**
+*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+/*
+var disqus_config = function () {
+this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+};
+*/
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+s.src = 'https://web1-471cmygc16.disqus.com/embed.js';
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 
 </body>
 </html>
