--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
 <head>
 <title>UX - html</title>
 <meta charset="utf-8">
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-142397303-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-142397303-1');
+</script>
 </head>
 
 <body>
@@ -72,6 +82,7 @@ s0.parentNode.insertBefore(s1,s0);
 })();
 </script>
 <!--End of Tawk.to Script-->
+
 
 </body>
 </html>
